[gd_scene load_steps=16 format=3 uid="uid://cv6hlxtiukmtc"]

[ext_resource type="Shader" path="res://Resources/Shaders/palette_swap.gdshader" id="1_eukm1"]
[ext_resource type="Script" path="res://Scenes and Scripts/UI/VisionButtons/vision_buttons.gd" id="1_hjucs"]
[ext_resource type="Theme" uid="uid://cfmbhoq8cuoge" path="res://Resources/Themes/ProjectTheme.tres" id="1_osu77"]
[ext_resource type="PackedScene" uid="uid://c842ueypoq88x" path="res://Scenes and Scripts/UI/Buttons/pull_out_tab_button_left.tscn" id="3_08n6d"]
[ext_resource type="Texture2D" uid="uid://c7jti5gp87fni" path="res://Textures/UI/Information/InfoBox.png" id="4_hck84"]
[ext_resource type="PackedScene" uid="uid://c4lyyfxwvqyfk" path="res://Scenes and Scripts/UI/Buttons/panelButton.tscn" id="5_tinf7"]
[ext_resource type="Texture2D" uid="uid://b4nip5xmw07y4" path="res://Textures/Buttons/icons/shade.png" id="6_63enc"]
[ext_resource type="Texture2D" uid="uid://bv0t333v5kk08" path="res://Textures/Buttons/icons/colour_wheel.png" id="6_v7snu"]
[ext_resource type="Texture2D" uid="uid://dosrelr2snlx" path="res://Textures/Buttons/icons/dumbell.png" id="7_nx8nj"]
[ext_resource type="Texture2D" uid="uid://d16opu3dyhri7" path="res://Textures/Buttons/eye/eye_open.png" id="10_qooab"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8lupt"]
shader = ExtResource("1_eukm1")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ei2kr"]
texture = ExtResource("4_hck84")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0
expand_margin_right = 10.0

[sub_resource type="Animation" id="Animation_2er6j"]
length = 0.001

[sub_resource type="Animation" id="Animation_nxemd"]
resource_name = "blink"
length = 0.14
step = 0.02

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5283d"]
_data = {
"RESET": SubResource("Animation_2er6j"),
"blink": SubResource("Animation_nxemd")
}

[node name="VisionButton" type="Control" node_paths=PackedStringArray("ContentContainer", "TabButton", "MovingContainer")]
material = SubResource("ShaderMaterial_8lupt")
layout_mode = 3
anchors_preset = 0
offset_right = 22.0
offset_bottom = 60.0
script = ExtResource("1_hjucs")
ContentContainer = NodePath("MovingContainer/Tab/MovingContainer")
TabButton = NodePath("MovingContainer/TabButton")
MovingContainer = NodePath("MovingContainer")
moving_container_margins = Vector2(8, 2.08165e-12)

[node name="MovingContainer" type="HBoxContainer" parent="."]
use_parent_material = true
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = 0

[node name="TabButton" parent="MovingContainer" instance=ExtResource("3_08n6d")]
layout_mode = 2
TabIcon = ExtResource("10_qooab")

[node name="Tab" type="PanelContainer" parent="MovingContainer"]
use_parent_material = true
layout_mode = 2
theme = ExtResource("1_osu77")
theme_override_styles/panel = SubResource("StyleBoxTexture_ei2kr")

[node name="MovingContainer" type="VBoxContainer" parent="MovingContainer/Tab"]
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/separation = -3

[node name="Colour" parent="MovingContainer/Tab/MovingContainer" instance=ExtResource("5_tinf7")]
layout_mode = 2
icon = ExtResource("6_v7snu")
toggle_mode = true

[node name="Shade" parent="MovingContainer/Tab/MovingContainer" instance=ExtResource("5_tinf7")]
layout_mode = 2
icon = ExtResource("6_63enc")
minimum_size = Vector2(20, 20)
toggle_mode = true

[node name="Strength" parent="MovingContainer/Tab/MovingContainer" instance=ExtResource("5_tinf7")]
layout_mode = 2
icon = ExtResource("7_nx8nj")
minimum_size = Vector2(20, 20)
toggle_mode = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5283d")
}

[connection signal="toggled" from="MovingContainer/Tab/MovingContainer/Colour" to="." method="_on_colour_toggled"]
[connection signal="toggled" from="MovingContainer/Tab/MovingContainer/Shade" to="." method="_on_shade_toggled"]
[connection signal="toggled" from="MovingContainer/Tab/MovingContainer/Strength" to="." method="_on_strength_toggled"]
